Fixed flicker.

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ main {
     border: solid red;
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr, 1fr;
+    grid-template-columns: 3fr 1fr;
     grid-template-rows: 2fr 1fr;
     grid-template-areas:
     "weather temp"
@@ -40,7 +40,6 @@ main {
 }
 
 .weatherBox {
-    background-color: blue;
 
     border: solid black;
 }
